// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tailwindcssinjs correct usage 1: correct usage 1 1`] = `

import tw from '../lib/macro';
const css = tw("dark:bg-black bg-gradient-to-r sm:motion-reduce:translate-y-0 motion-reduce:hover:translate-y-0 md:motion-reduce:hover:translate-y-0");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  backgroundImage: "linear-gradient(to right, var(--gradient-color-stops))",
  "@media (min-width: 640px)": {
    "@media (prefers-reduced-motion: reduce)": {
      "--transform-translate-y": "0",
    },
  },
  "@media (min-width: 1024px)": {
    "@media (prefers-reduced-motion: reduce)": {
      "&:hover": {
        "--transform-translate-y": "0",
      },
    },
  },
  "@media (prefers-color-scheme: dark)": {
    "--bg-opacity": "1",
    backgroundColor: ["#000000", "rgba(0, 0, 0, var(--bg-opacity))"],
  },
  "@media (prefers-reduced-motion: reduce)": {
    "&:hover": {
      "--transform-translate-y": "0",
    },
  },
};


`;

exports[`tailwindcssinjs correct usage 5: correct usage 5 1`] = `

import tw from '../lib/macro';
const css = tw("group-hover:bg-red-300");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  ".group:hover &": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
};


`;

exports[`tailwindcssinjs correct usage 6: correct usage 6 1`] = `

import tw from '../lib/macro';
const css = tw("dark:bg-red-300");

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {
  "@media (prefers-color-scheme: dark)": {
    "--bg-opacity": "1",
    backgroundColor: ["#f8b4b4", "rgba(248, 180, 180, var(--bg-opacity))"],
  },
};


`;

exports[`tailwindcssinjs no usage: no usage 1`] = `

import tw from '../lib/macro'

      ↓ ↓ ↓ ↓ ↓ ↓



`;
